--- a/.config/topgrade.toml
+++ b/.config/topgrade.toml
@@ -2,7 +2,7 @@
 #assume_yes = true
 
 # Disable specific steps - same options as the command line flag
-#disable = ["system", "emacs"]
+disable = ["gcloud"]
 
 # Ignore failures for these steps
 #ignore_failures = ["powershell"]
@@ -32,13 +32,13 @@
 #set_title = false
 
 # Display the time in step titles
-# display_time = true
+display_time = true
 
 # Cleanup temporary or old files
-#cleanup = true
+cleanup = true
 
 [git]
-#max_concurrency = 5
+max_concurrency = 20
 # Additional git repositories to pull
 #repos = [
 #    "~/src/*/",
@@ -67,7 +67,7 @@
 
 [linux]
 # Arch Package Manager to use. Allowed values: autodetect, trizen, paru, yay, pikaur, pacman.
-#arch_package_manager = "pacman"
+arch_package_manager = "yay"
 # Arguments to pass yay (or paru) when updating packages
 #yay_arguments = "--nodevel"
 #show_arch_news = true
@@ -95,8 +95,8 @@
 
 [firmware]
 # Offer to update firmware; if false just check for and display available updates
-#upgrade = true
+upgrade = true
 
 [flatpak]
 # Use sudo for updating the system-wide installation
-#use_sudo = true
+use_sudo = true
