--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -4,7 +4,8 @@
     "coc-tsserver": ">=1.11.11",
     "coc-sh": ">=0.7.0",
     "coc-eslint": ">=1.5.8",
-    "coc-lua": ">=1.0.1"
+    "coc-lua": ">=1.0.1",
+    "coc-prisma": ">=0.11.0"
   },
   "lastUpdate": 1665608563047
 }
