--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,4 +1,4 @@
-background #131313
+background #07070a
 foreground #abb2bf
 selection_background #abb2bf
 selection_foreground #282c34
@@ -6,7 +6,7 @@ url_color #565c64
 cursor #abb2bf
 active_border_color #545862
 inactive_border_color #353b45
-active_tab_background #1f2227
+active_tab_background #040720
 active_tab_foreground #abb2bf
 inactive_tab_background #353b45
 inactive_tab_foreground #565c64
