feat(coc): add format on save

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -3,5 +3,7 @@
 	"eslint.options": {
 		"cache": true
 	},
-	"eslint.format.enable": true
+	"coc.preferences.formatOnSaveFiletypes": [
+		"*"
+	]
 }
