--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -5,7 +5,8 @@
     "coc-sh": ">=0.7.0",
     "coc-eslint": ">=1.5.8",
     "coc-lua": ">=1.0.1",
-    "coc-prisma": ">=0.11.0"
+    "coc-prisma": ">=0.11.0",
+    "coc-stylua": ">=0.0.11"
   },
   "lastUpdate": 1665608563047
 }
