--- a/.config/sway/config
+++ b/.config/sway/config
@@ -5,7 +5,7 @@
 set $mod Mod4
 set $term kitty
 set $file_man kitty -e ranger
-set $menu rofi -show run
+set $menu tofi-drun --drun-launch true --font '/usr/share/fonts/SFMono Regular Nerd Font Complete.otf' --num-results 5 --width 100% --height 100% --hint-font false --late-keyboard-init --border-width 0 --outline-width 0 --padding-left 35% --padding-top 35% --result-spacing 25 --background-color '#000A'
 set $browser firefox
 set $alt_browser firefox
 set $audio_man pavucontrol
@@ -25,7 +25,7 @@ exec $browser
 workspace 5
 exec thunderbird
 workspace 6
-exec slack
+exec slack --enable-features=WebRTCPipeWireCapturer
 
 ################################################################################
 ###  STYLING
@@ -175,3 +175,9 @@ bar {
 }
 
 include /etc/sway/config.d/*
+
+################################################################################
+###  SCREEN SHARING
+################################################################################
+exec systemctl --user import-environment XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
+exec dbus-update-activation-environment WAYLAND_DISPLAY
