--- a/.config/sway/config
+++ b/.config/sway/config
@@ -5,7 +5,8 @@
 set $mod Mod4
 set $term kitty
 set $file_man kitty -e ranger
-set $menu tofi-drun --drun-launch true --font '/usr/share/fonts/SFMono Regular Nerd Font Complete.otf' --num-results 5 --width 100% --height 100% --hint-font false --late-keyboard-init --border-width 0 --outline-width 0 --padding-left 35% --padding-top 35% --result-spacing 25 --background-color '#000A'
+set $menu tofi-drun --drun-launch true --font '/usr/share/fonts/SFMono Regular Nerd Font Complete.otf' --num-results 5 --width 100% --height 100% --hint-font false --late-keyboard-init --border-width 0 --outline-width 0 --padding-left 35% --padding-top 35% --result-spacing 25 --background-color '#000A' | xargs swaymsg exec --
+set $menu-script tofi-run --font '/usr/share/fonts/SFMono Regular Nerd Font Complete.otf' --num-results 5 --width 100% --height 100% --hint-font false --late-keyboard-init --border-width 0 --outline-width 0 --padding-left 35% --padding-top 35% --result-spacing 25 --background-color '#000A' | xargs swaymsg exec --
 set $browser firefox
 set $alt_browser firefox
 set $audio_man pavucontrol
@@ -51,6 +52,7 @@ output "*" bg ~/Media/Pictures/breathe-in-radium.png fill
     bindsym $mod+Return exec $term
     bindsym $mod+Shift+Return exec $file_man
     bindsym $mod+Space exec $menu
+	bindsym $mod+Shift+Space exec $menu-script
     bindsym $mod+b exec $browser
     bindsym $mod+Shift+b exec $alt_browser
 
