--- a/.config/sway/config
+++ b/.config/sway/config
@@ -115,7 +115,7 @@ output "*" bg ~/Media/Pictures/breathe-in-radium.png fill
     bindsym $mod+w layout tabbed
     bindsym $mod+e layout toggle split
 
-    # bindsym $mod+space focus mode_toggle
+    bindsym $mod+Shift+t focus mode_toggle
     bindsym $mod+f fullscreen
     bindsym $mod+t floating toggle
     bindsym $mod+a focus parent
