--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,10 @@
-font_family SFMono Bold Nerd Font Complete
+font_family SFMono Nerd Font
+font_size 14
 cursor_shape block
 cursor_blink_interval 0
 cursor_beam_thickness 0.2
 
-window_padding_width 10
+window_padding_width 0
 
 include ./theme.conf
 
