--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -4,6 +4,10 @@
 		"cache": true
 	},
 	"coc.preferences.formatOnSaveFiletypes": [
-		"*"
-	]
+		"go",
+		"python",
+		"json"
+	],
+	"python.formatting.provider": "autopep8",
+	"python.formatting.autopep8Path": "/opt/homebrew/bin/autopep8"
 }
