--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,13 +1,14 @@
 {
+	"coc.preferences.formatOnSaveFiletypes": [
+		"go",
+		"python",
+		"json",
+		"typescript"
+	],
 	"eslint.autoFixOnSave": true,
 	"eslint.options": {
 		"cache": true
 	},
-	"coc.preferences.formatOnSaveFiletypes": [
-		"go",
-		"python",
-		"json"
-	],
 	"python.formatting.provider": "autopep8",
 	"python.formatting.autopep8Path": "/opt/homebrew/bin/autopep8"
 }
