--- a/.config/yabai/.yabairc
+++ b/.config/yabai/.yabairc
@@ -12,6 +12,7 @@ yabai -m config left_padding   8
 yabai -m config right_padding  8
 yabai -m config window_gap     8
 yabai -m config auto_balance off
+yabai -m config auto_focus on
 yabai -m config split_ratio 0.5
 yabai -m config window_shadow off
 
@@ -37,13 +38,14 @@ function setup_space {
 }
 
 setup_space 1 emacs
-setup_space 2 code
+setup_space 2 nvim
 setup_space 3 web
 setup_space 4 social
 setup_space 5 media
 setup_space 6 other
 
 # move some apps automatically to specific spaces
+yabai -m rule --add app="^Emacs$" space=1 manage=on
 yabai -m rule --add app="^kitty$" space=2
 yabai -m rule --add app="^Firefox$" space=^3
 yabai -m rule --add app="^Slack$" space=4
