--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,5 +1,6 @@
 background #0d1117
-foreground #abb2bf
+background_opacity 0.7
+foreground #ffffff
 selection_background #abb2bf
 selection_foreground #282c34
 url_color #565c64
@@ -11,7 +12,7 @@ active_tab_foreground #abb2bf
 inactive_tab_background #353b45
 inactive_tab_foreground #565c64
 tab_bar_background #353b45
-color0  #282c34
+color0  #ffffff
 color8  #282c34
 color1  #e06c75
 color9  #e06c75
