feat(macos): update skhd

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,14 +1,13 @@
-font_family MesloLGL Nerd Font
+font_family SFMono Nerd Font
 font_size 14
 cursor_shape block
 cursor_blink_interval 0
 cursor_beam_thickness 0.2
+placement_strategy center
 
-window_padding_width 0
+window_padding_width 10
 
 include ./theme.conf
-
-# vim: ft=kitty
 
 confirm_os_window_close	0
 macos_option_as_alt yes
