--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,5 +1,5 @@
-background #0d1117
-background_opacity 0.7
+background #1e1f1d
+background_opacity 1
 foreground #ffffff
 selection_background #abb2bf
 selection_foreground #282c34
