refactor(vscode): update settings

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,3 +8,9 @@
 	gpgsign = true
 [tag]
 	gpgsign = true
+[merge]
+  tool = codium
+[mergetool "codium"]
+  cmd = codium --wait --merge $REMOTE $LOCAL $BASE $MERGED
+[diff]
+	tool = codium
