--- a/.config/yabai/.yabairc
+++ b/.config/yabai/.yabairc
@@ -15,6 +15,7 @@ yabai -m config auto_balance off
 yabai -m config auto_focus on
 yabai -m config split_ratio 0.5
 yabai -m config window_shadow off
+yabai -m config mouse_follows_focus on
 
 #
 # setup spaces
@@ -42,17 +43,14 @@ setup_space 2 code
 setup_space 3 other
 setup_space 4 other
 setup_space 5 other
-setup_space 6 other
-setup_space 7 other
-setup_space 8 other
-setup_space 9 social
-setup_space 10 media
+setup_space 6 social
+setup_space 7 media
 
 # move some apps automatically to specific spaces
 yabai -m rule --add app="^Firefox$" space=^1
 yabai -m rule --add app="^VSCodium$" space=^2
-yabai -m rule --add app="^Slack$" space=9
-yabai -m rule --add app="^Spotify$" space=10
+yabai -m rule --add app="^Slack$" space=6
+yabai -m rule --add app="^Spotify$" space=7
 yabai -m rule --add app="^Finder$" manage=off grid=600:600:50:50:500:500 layer=above
 yabai -m rule --add app="^System Settings$" manage=off grid=600:800:100:50:800:500 layer=above
 yabai -m rule --add app="^Kitty$" manage=off layer=above
