feat: big udpate

--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,6 +1,6 @@
-background #1e1f1d
+background #1c1b22
 background_opacity 1
-foreground #ffffff
+foreground #CDD6F4
 selection_background #abb2bf
 selection_foreground #282c34
 url_color #565c64
