--- a/.config/yabai/.yabairc
+++ b/.config/yabai/.yabairc
@@ -33,12 +33,15 @@ setup_space 1 web
 setup_space 2 code
 setup_space 3 other
 setup_space 4 other
-setup_space 5 other
+setup_space 5 mail_calendar
 setup_space 6 social
 setup_space 7 media
 
 # move some apps automatically to specific spaces
 yabai -m rule --add app="^Firefox$" space=^1
-yabai -m rule --add app="^VSCodium$" space=^2
-yabai -m rule --add app="^Slack$" space=6
-yabai -m rule --add app="^Spotify$" space=7
+yabai -m rule --add app="^Webstorm$" space=^2
+yabai -m rule --add app="^Slack$" space=^6
+yabai -m rule --add app="^Spotify$" space=^7
+#grid=<rows>:<cols>:<start-x>:<start-y>:<width>:<height>
+yabai -m rule --add app="^Calendar$" space=^5 manage=off 
+yabai -m rule --add app="^Mail$" space=^5 manage=off
