--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,6 +4,7 @@ cursor_shape block
 cursor_blink_interval 0
 cursor_beam_thickness 0.2
 placement_strategy center
+shell_integration no-sudo
 
 window_padding_width 10
 
