refactor: did not commit again

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,3 +2,10 @@
 	gpgsign = true
 [user]
 	signingkey = aria.groult@pm.me
+	name = JaroDevs
+	email = aria.groult@pm.me
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
